--- a/rca/static_src/sass/components/_partnerships.scss
+++ b/rca/static_src/sass/components/_partnerships.scss
@@ -1,4 +1,14 @@
 .partnerships {
+    $root: &;
+
+    &--tight-heading {
+        #{$root}__heading {
+            @include media-query(large) {
+                grid-column: 2 / span 1;
+            }
+        }
+    }
+
     &__header {
         margin-bottom: $gutter;
 
