--- a/rca/static_src/sass/components/_title-area.scss
+++ b/rca/static_src/sass/components/_title-area.scss
@@ -160,6 +160,8 @@
     }
 
     &--landing-page {
+        padding-bottom: ($gutter);
+
         @include media-query(large) {
             padding-bottom: ($gutter * 2);
         }
