Twitter open in new window

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
@@ -30,7 +30,7 @@
         <div class="key-details__section key-details__section--twitter">
             <ul class="key-details__list">
                 <li class="key-details__list-item">
-                    <a href="http://www.twitter.com/{{ centre_twitter }}" class="link link--tertiary link--link">
+                    <a href="http://www.twitter.com/{{ centre_twitter }}" class="link link--tertiary link--link" target="_blank" rel="noopener">
                         <span class="link__label">Twitter</span>
                         <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                     </a>
