--- a/rca/static_src/sass/components/_accordion-block.scss
+++ b/rca/static_src/sass/components/_accordion-block.scss
@@ -36,4 +36,8 @@
             grid-column: 2 / span 2;
         }
     }
+
+    .staff-detail-accordion--wo-gallery & {
+        margin-top: 0;
+    }
 }
