Add no-modal modifier to booking bar, allows for different layout if no modal

--- a/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
+++ b/rca/project_styleguide/templates/patterns/molecules/booking-bar/booking-bar.html
@@ -1,4 +1,4 @@
-<div class="booking-bar bg bg--dark">
+<div class="booking-bar {% if not item.modal %}booking-bar--no-modal{% endif %} bg bg--dark ">
     {% include "patterns/atoms/grid-lines/grid-lines.html" %}
     <div class="booking-bar__container grid">
         <div class="booking-bar__message">
