--- a/rca/static_src/sass/components/_booking-bar.scss
+++ b/rca/static_src/sass/components/_booking-bar.scss
@@ -1,9 +1,24 @@
 .booking-bar {
+    $root: &;
     border-bottom: 1px solid $color--grid-line-light;
     overflow: hidden;
 
     @include media-query(medium) {
         border-top: 1px solid $color--grid-line-light;
+    }
+
+    &--no-modal {
+        #{$root}__message {
+            @include media-query(large) {
+                grid-column: 2 / span 1;
+            }
+        }
+        #{$root}__action {
+            @include media-query(large) {
+                grid-column: 3 / span 2;
+                justify-content: flex-end;
+            }
+        }
     }
 
     &__container {
