Giving modal launcher no width if there’s no modal

--- a/rca/static_src/sass/components/_modal-launcher.scss
+++ b/rca/static_src/sass/components/_modal-launcher.scss
@@ -59,6 +59,12 @@
         }
     }
 
+    .booking-bar--no-modal & {
+        @include media-query(large) {
+            width: auto;
+        }
+    }
+
     .bg--dark & {
         #{$root}__label {
             color: $color--white;
