--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -125,3 +125,9 @@ $image-offset-right: -($gutter * 3);
 
 $transition: 0.25s ease-out;
 $cubic-transition: 250ms cubic-bezier(0.24, 0.26, 0.2, 1);
+
+// --------------------------------- Custom properties --------------------------------------
+
+:root {
+    --grid-width: 0; // populated with carousel js
+}
