Updating carousel square card design

--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -155,7 +155,7 @@
             {% if page.centre_news %}
                 <section class="section bg bg--dark">
 
-                    <div class="section__row section__row--first section__row--last">
+                    <div class="section__row section__row--first section__row--last-large">
                         <div class="partnerships">
                             <div class="partnerships__header grid">
                                 <h2 class="partnerships__heading heading heading--two">{{ page.centre_news.title }}</h2>
