--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -401,6 +401,42 @@
         }
     }
 
+    // .carousel--square .carousel__item .card
+    .carousel__item & {
+        .carousel--square & {
+            @include media-query(medium) {
+                padding-right: ($gutter * 5);
+            }
+
+            @include media-query(large) {
+                padding-right: var(--grid-width);
+            }
+
+            #{$root}__description {
+                @include media-query(large) {
+                    margin-bottom: ($gutter / 2);
+                }
+            }
+
+            #{$root}__content {
+                @include media-query(large) {
+                    flex-basis: 50%;
+                    min-width: 50%;
+                    max-width: 50%;
+                    padding-top: ($gutter * 1.5);
+                    top: -35px;
+                    margin-bottom: -35px;
+                }
+            }
+
+            #{$root}__description {
+                @include media-query(large) {
+                    width: 200%;
+                }
+            }
+        }
+    }
+
     .bg--dark & {
         &#{$root}--image {
             #{$root}__content {
