Tablet styling for card in square carousel

--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -419,17 +419,24 @@
             }
 
             #{$root}__content {
-                @include media-query(large) {
-                    flex-basis: 50%;
-                    min-width: 50%;
-                    max-width: 50%;
+                @include media-query(medium) {
+                    flex-basis: calc(50% + 50px);
+                    min-width: calc(50% + 50px);
+                    max-width: calc(50% + 50px);
                     padding-top: ($gutter * 1.5);
                     top: -35px;
                     margin-bottom: -35px;
                 }
+
+                @include media-query(large) {
+                    flex-basis: 50%;
+                    min-width: 50%;
+                    max-width: 50%;
+                }
             }
 
-            #{$root}__description {
+            #{$root}__description,
+            #{$root}__heading {
                 @include media-query(large) {
                     width: 200%;
                 }
