--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -14,6 +14,7 @@
 // Components
 @import 'components/accordion';
 @import 'components/accordion-block';
+@import 'components/anchor-nav';
 @import 'components/app';
 @import 'components/apply-intro';
 @import 'components/audience-nav-item';
@@ -25,7 +26,6 @@
 @import 'components/breadcrumb';
 @import 'components/burger';
 @import 'components/bg';
-// @import 'components/call-to-action';
 @import 'components/cookie-message';
 @import 'components/card';
 @import 'components/carousel';
