--- a/rca/static_src/sass/components/_index-module.scss
+++ b/rca/static_src/sass/components/_index-module.scss
@@ -1,2 +1,30 @@
 .index-module {
+    &__header {
+        grid-column: 1 / span 2;
+        margin-bottom: ($gutter * 2);
+
+        @include media-query(medium) {
+            grid-column: 1 / span 1;
+        }
+
+        @include media-query(large) {
+            grid-column: 2 / span 1;
+        }
+    }
+
+    &__header {
+        margin-right: $gutter;
+    }
+
+    &__content {
+        grid-column: 1 / span 2;
+
+        @include media-query(medium) {
+            grid-column: 2 / span 1;
+        }
+
+        @include media-query(large) {
+            grid-column: 3 / span 2;
+        }
+    }
 }
