--- a/rca/static_src/sass/components/_quote.scss
+++ b/rca/static_src/sass/components/_quote.scss
@@ -24,4 +24,20 @@
             padding-right: 33.33%;
         }
     }
+
+    .streamfield & {
+        padding-top: ($gutter * 2);
+        padding-bottom: ($gutter * 2);
+        border-width: 1px 0;
+        border-style: solid;
+        margin-bottom: ($gutter * 2);
+
+        .bg--light & {
+            border-color: $color--grid-line-dark;
+        }
+
+        .bg--dark & {
+            border-color: $color--grid-line-light;
+        }
+    }
 }
