Tablet styling for index module

--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -461,12 +461,14 @@
             margin-bottom: -$notch-height-small;
 
             @include media-query(medium) {
-                top: 0;
-                margin-bottom: 0;
+                top: -$notch-height-small;
+                margin-bottom: -$notch-height-small;
             }
 
             @include media-query(large) {
                 position: static;
+                top: 0;
+                margin-bottom: 0;
             }
 
             &::after {
