--- a/rca/static_src/sass/components/_page.scss
+++ b/rca/static_src/sass/components/_page.scss
@@ -113,4 +113,12 @@
             }
         }
     }
+
+    .app--guide & {
+        #{$root}__header {
+            @include media-query(large) {
+                padding-top: ($gutter * 10);
+            }
+        }
+    }
 }
