--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -15,6 +15,7 @@
 @import 'components/accordion';
 @import 'components/accordion-block';
 @import 'components/anchor-nav';
+@import 'components/anchor-nav-item';
 @import 'components/app';
 @import 'components/apply-intro';
 @import 'components/audience-nav-item';
@@ -90,6 +91,7 @@
 @import 'components/step-item';
 @import 'components/stat-block';
 @import 'components/steps';
+@import 'components/streamfield';
 @import 'components/student-listing';
 @import 'components/tabs';
 @import 'components/tab-item';
