--- a/rca/static_src/sass/components/_title-area.scss
+++ b/rca/static_src/sass/components/_title-area.scss
@@ -174,6 +174,12 @@
         }
     }
 
+    &--guide {
+        #{$root}__heading {
+            margin-bottom: ($gutter * 2);
+        }
+    }
+
     .bg--dark & {
         #{$root}__sub-heading {
             color: $color--meta-darkbg;
