--- a/rca/static_src/sass/components/_title-area.scss
+++ b/rca/static_src/sass/components/_title-area.scss
@@ -163,6 +163,7 @@
         padding-bottom: ($gutter);
 
         @include media-query(large) {
+            padding-top: ($gutter * 2);
             padding-bottom: ($gutter * 2);
         }
 
