--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -184,7 +184,7 @@
         }
     }
 
-    .bg--dark & {
+    .bg--light & {
         #{$root}__copy {
             border-bottom: 1px solid $color--grid-line-dark;
 
