--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -399,6 +399,10 @@
                 margin-left: 66.666%;
             }
         }
+
+        #{$root}__container {
+            padding-right: $gutter;
+        }
     }
 
     // .carousel--square .carousel__item .card
